Correction: img et css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma3</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/f35c9641f7.js" crossorigin="anonymous"></script>
 
 </head>
@@ -12,7 +12,7 @@
 
     <header>
         <div>
-            <a href="/"><img src="/img/SkillFacile_logo.png" alt="Logo Skill Facile"></a>
+            <a href="/"><img src="./img/SkillFacile_logo.png" alt="Logo Skill Facile"></a>
             <nav>
                 <ul>
                     <li><a href="/">Accueil</a></li>
@@ -145,12 +145,12 @@
                     </article>
                     <a href="#" class="Green2Clear">Inscription accompagnement perso</a>
                 </div>
-                <img src="/img/Accompagnement_Perso.png" alt="Une paire de main tenant une ampoule allumé par des guirlandes.">
+                <img src="./img/Accompagnement_Perso.png" alt="Une paire de main tenant une ampoule allumé par des guirlandes.">
             </div>
 
 
             <div id="small_group">
-                <img src="/img/Accompagnement small groupe.png" alt="Image représentant un groupe de personne.">
+                <img src="./img/Accompagnement small groupe.png" alt="Image représentant un groupe de personne.">
                 <div>
                     <article id="article_smallgroup">
                         <h4>Inscription à l'accompagnement small group</h4>
